--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -66,6 +66,7 @@ main {
         clip-path: ellipse(171% 100% at 58.47% 0%);
     }
 }
+
 .FormContainer {
     display: flex;
     flex-direction: column;
@@ -178,6 +179,8 @@ footer {
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    background-color: white;
+    border: 1px solid black;
     div {
         text-align: center;
         margin-bottom: 16px;
