--- a/src/containers/Modal/style.scss
+++ b/src/containers/Modal/style.scss
@@ -8,7 +8,7 @@
     justify-content: center;
     align-items: center;
     z-index: 1000;
-    content {
+    .content {
         position: relative;
         overflow: hidden;
         background: white;
