--- a/src/containers/ModalEvent/style.scss
+++ b/src/containers/ModalEvent/style.scss
@@ -6,6 +6,7 @@
     width: 450px;
     position: relative;
     min-height: 669px;
+    background-color: white;
     &__imageContainer {
         width: 100%;
         img {
