--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -179,8 +179,8 @@ footer {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    background-color: white;
     border: 1px solid black;
+    border-radius: 7px;
     div {
         text-align: center;
         margin-bottom: 16px;
